--- a/.github/workflows/main_battlehungerapi1.yml
+++ b/.github/workflows/main_battlehungerapi1.yml
@@ -61,5 +61,5 @@ jobs:
         with:
           app-name: 'battlehungerApi1'
           slot-name: 'Production'
-          package: .
+          package: ./api1
           
