--- a/.github/workflows/main_battlehungerapi1.yml
+++ b/.github/workflows/main_battlehungerapi1.yml
@@ -15,6 +15,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          path: api
 
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
@@ -61,5 +63,5 @@ jobs:
         with:
           app-name: 'battlehungerApi1'
           slot-name: 'Production'
-          package: ./api1
+          package: .
           
