--- a/.github/workflows/main_battlehungerapi1.yml
+++ b/.github/workflows/main_battlehungerapi1.yml
@@ -15,8 +15,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-        with:
-          path: api
 
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
@@ -27,7 +25,9 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: |
+          cd api1
+          dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
