--- a/.github/workflows/main_battlehungerapi1.yml
+++ b/.github/workflows/main_battlehungerapi1.yml
@@ -22,18 +22,16 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build ./api1 --configuration Release
 
       - name: dotnet publish
-        run: |
-          cd api1
-          dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish ./api1 -c Release -o ${{env.DOTNET_ROOT}}/publish
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          path: ${{env.DOTNET_ROOT}}/publish
 
   deploy:
     runs-on: ubuntu-latest
