--- a/webapp/battlehungerVueWebAppTest/package.json
+++ b/webapp/battlehungerVueWebAppTest/package.json
@@ -11,7 +11,10 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
-    "vue": "^3.4.29"
+    "@azure/msal-browser": "^3.25.0",
+    "element-plus": "^2.8.4",
+    "vue": "^3.4.29",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
