--- a/.github/workflows/main_battlehungerapi1.yml
+++ b/.github/workflows/main_battlehungerapi1.yml
@@ -1,13 +1,12 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - battlehungerApi1
+name: Build and deploy battlehungerApi1
 
 on:
   push:
-    branches:
-      - main
-  workflow_dispatch:
+    paths:
+      - api1/**
 
 jobs:
   build:
