--- a/.github/workflows/main_movelorencia-api1.yml
+++ b/.github/workflows/main_movelorencia-api1.yml
@@ -5,9 +5,8 @@ name: Build and deploy ASP.Net Core app to Azure Web App - movelorencia-api1
 
 on:
   push:
-    branches:
-      - main
-  workflow_dispatch:
+    paths:
+      - api1/**
 
 jobs:
   build:
@@ -19,13 +18,13 @@ jobs:
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '8.x'
+          dotnet-version: "8.x"
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build ./api1 --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish ./api1 -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -37,7 +36,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'
+      name: "Production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write #This is required for requesting the JWT
@@ -47,7 +46,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: .net-app
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -59,7 +58,6 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'movelorencia-api1'
-          slot-name: 'Production'
+          app-name: "movelorencia-api1"
+          slot-name: "Production"
           package: .
-          
