--- a/.github/workflows/main_movelorencia-api1.yml
+++ b/.github/workflows/main_movelorencia-api1.yml
@@ -24,13 +24,13 @@ jobs:
         run: dotnet build ./api1 --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish ./api1 -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish ./api1 -c Release -o ${{env.DOTNET_ROOT}}/publish
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          path: ${{env.DOTNET_ROOT}}/publish
 
   deploy:
     runs-on: ubuntu-latest
