--- a/api1/appsettings.json
+++ b/api1/appsettings.json
@@ -7,14 +7,14 @@
   },
   "AllowedHosts": "*",
   "AzureAD": {
-    "Authority": "https://login.microsoftonline.com/3b94e066-71eb-447b-b43a-9a739d4f2544",
-    "Api1ClientId": "d65c15cb-cf7a-49b5-96b2-3fac2e558ac4",
-    "Api2ClientId": "1f0f922f-ed3e-486b-961c-cb0ad598fc0e",
-    "WebAppClientId": "70c87435-8ae8-4808-bc8a-b031649b4d68",
-    "Audience": "d65c15cb-cf7a-49b5-96b2-3fac2e558ac4"
+    "Authority": "https://login.microsoftonline.com/d9f9f390-21e0-4122-8bc7-741f92e7211d",
+    "Api1ClientId": "02013b40-85bb-4145-9abe-6d9942ee97a0",
+    "Api2ClientId": "",
+    "WebAppClientId": "99a7629b-929c-45fc-853d-e177736ea35f",
+    "Audience": ""
   },
   "ApiConfig": {
-    "BattlehungerApi2": "https://battlehungerapi2-etahb7gdegezhegq.centralus-01.azurewebsites.net",
+    "BattlehungerApi2": "",
     "BattlehungerAdminApi": "http://localhost:8087"
   }
 }
