--- a/api1/appsettings.json
+++ b/api1/appsettings.json
@@ -11,7 +11,7 @@
     "Api1ClientId": "02013b40-85bb-4145-9abe-6d9942ee97a0",
     "Api2ClientId": "",
     "WebAppClientId": "99a7629b-929c-45fc-853d-e177736ea35f",
-    "Audience": ""
+    "Audience": "02013b40-85bb-4145-9abe-6d9942ee97a0"
   },
   "ApiConfig": {
     "BattlehungerApi2": "",
