--- a/.github/workflows/main_movelorencia-apione.yml
+++ b/.github/workflows/main_movelorencia-apione.yml
@@ -59,4 +59,4 @@ jobs:
         uses: azure/webapps-deploy@v3
         with:
           app-name: "movelorencia-apiOne"
-          package: "./apiOne"
+          package: .
