--- a/api1/appsettings.json
+++ b/api1/appsettings.json
@@ -9,12 +9,11 @@
   "AzureAD": {
     "Authority": "https://login.microsoftonline.com/d9f9f390-21e0-4122-8bc7-741f92e7211d",
     "Api1ClientId": "02013b40-85bb-4145-9abe-6d9942ee97a0",
-    "Api2ClientId": "",
+    "Api2ClientId": "0896c417-2d1e-446a-afa9-34bcb4b028bf",
     "WebAppClientId": "99a7629b-929c-45fc-853d-e177736ea35f",
     "Audience": "02013b40-85bb-4145-9abe-6d9942ee97a0"
   },
   "ApiConfig": {
-    "BattlehungerApi2": "",
-    "BattlehungerAdminApi": "http://localhost:8087"
+    "movelorenciaApi2": "https://movelorencia-api2.azurewebsites.net"
   }
 }
