--- a/webapp/battlehungerVueWebAppTest/tsconfig.app.json
+++ b/webapp/battlehungerVueWebAppTest/tsconfig.app.json
@@ -6,7 +6,8 @@
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "verbatimModuleSyntax": false,
-
+    "noImplicitAny": false,
+    "allowJs": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
