--- a/webapp/battlehungerVueWebAppTest/tsconfig.node.json
+++ b/webapp/battlehungerVueWebAppTest/tsconfig.node.json
@@ -11,7 +11,8 @@
     "composite": true,
     "noEmit": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-
+    "noImplicitAny": false,
+    "allowJs": true,
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "types": ["node"]
