--- a/webapp/battlehungerVueWebAppTest/package.json
+++ b/webapp/battlehungerVueWebAppTest/package.json
@@ -12,6 +12,11 @@
   },
   "dependencies": {
     "@azure/msal-browser": "^3.25.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "vue": "^3.4.29",
     "vue-router": "^4.4.5"
   },
