--- a/adminApp/appsettings.json
+++ b/adminApp/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AWS": {
+    "AccessKey": "AKIAVU6PSQQ7RSBQRJDR",
+    "SecretKey": "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",
+    "Region": "ap-southeast-1"
+  }
 }
